<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="5.6">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:background="@drawable/textview_border_gray"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:text="@string/date"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="@drawable/textview_border_gray"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:text="@string/fee_type"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:background="@drawable/textview_border_gray"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:text="@string/opening_balance"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/textview_border_gray"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:text="@string/recievable"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/textview_border_gray"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:text="@string/received"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold" />


</LinearLayout>