<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    app:layout_collapseMode="parallax">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_margin"
            android:text="@string/select_school"
            android:textSize="@dimen/text_size"
            android:visibility="visible" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border">

            <Spinner
                android:id="@+id/spn_school"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_margin"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_class_section"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border">

                    <Spinner
                        android:id="@+id/spn_class_section_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_weight=".5"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_class"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border">

                    <Spinner
                        android:id="@+id/spn_class_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_section"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border">

                    <Spinner
                        android:id="@+id/spn_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/RadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/rbTotal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:textSize="@dimen/text_size"
                        android:checked="true"
                        android:text="@string/all" />

                    <RadioButton
                        android:id="@+id/rbNewAdmissions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:textSize="@dimen/text_size"
                        android:text="@string/New_admissions" />

                    <RadioButton
                        android:id="@+id/rbReadmissions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:textSize="@dimen/text_size"
                        android:text="@string/Readmissions" />

                    <RadioButton
                        android:id="@+id/rbPromotions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:textSize="@dimen/text_size"
                        android:text="@string/Promotions" />

                    <RadioButton
                        android:id="@+id/rbGraduations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:textSize="@dimen/text_size"
                        android:text="@string/Graduations" />

                </RadioGroup>

            </HorizontalScrollView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_margin"
            android:layout_marginTop="@dimen/element_margin">

            <Button
                android:id="@+id/btnsearch"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="Search" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>